# Talos-Voice-Assistant

./: .env.example  .gitignore  README.md  README_zh.md  config.toml.example  main.py  pyproject.toml  requirements.txt  run_listener_service.sh  run_main_server.bat
provided_models/openwakeword/: hi_talos.onnx
server/: listener_service.py  main_server.py
utils/: __init__.py  config.py
