[project]
name = "talos"
version = "0.1.0"
description = "A voice assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "dynaconf>=3.2.11",
    "fastapi>=0.116.2",
    "faster-whisper>=1.2.0",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "openai>=1.108.0",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
